Added cache-busting query string

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="description" content="Family-owned gate and fencing specialists since 1990. Unique Ornamental Iron builds custom wrought iron solutions for homes and businesses across Southern California.">
     <meta name="keywords" content="custom gates, wrought iron fencing, metalwork, driveway gates, iron fencing, SoCal fencing, family owned, Unique Ornamental Iron">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="assets/css/style.css?v=2" />
+
 
 </head>
 <body>
