Add hero background video to homepage

--- a/index.html
+++ b/index.html
@@ -27,11 +27,20 @@
     </header>
 
     <main>
-        <section class = "hero">
-            <h2>You Dream It — We Build It.</h2>
-            <p>Since 1990, Unique Ornamental Iron has led Southern California's fencing and gate industry with unmatched craftsmanship and a passion for exceeding expectations.</p>
-            <a href = "highlights.html" class = "cta-button">View Our Work</a>
-            <a href = "contact.html" class = "cta-button">Get a Quote</a>
+        <section class="hero">
+            <div class="hero-video-wrapper">
+                <video autoplay muted loop playsinline>
+                    <source src="assets/videos/hero.mp4" type="video/mp4" />
+                    Your browser does not support the video tag.
+                </video>
+                <div class="hero-overlay"></div>
+                <div class="hero-content">
+                    <h2>You Dream It — We Build It.</h2>
+                    <p>Since 1990, Unique Ornamental Iron has led Southern California's fencing and gate industry with unmatched craftsmanship and a passion for exceeding expectations.</p>
+                    <a href="highlights.html" class="cta-button">View Our Work</a>
+                    <a href="contact.html" class="cta-button">Get a Quote</a>
+                </div>
+            </div>
         </section>
     </main>
 
