--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="assets/css/style.css?v=2" />
 
 </head>
-<body>
+<body class = "default">
 
   <header>
     <h1>Unique Ornamental Iron Inc.</h1>
