--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,15 @@
   <link rel="stylesheet" href="assets/css/style.css?v=2" />
 
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QVXNBNRGT7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QVXNBNRGT7');
+</script>
 <body class = "default">
 
   <header>
