SEO updates to Titles

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unique Ornamental Iron Inc.</title>
+    <title>Custom Iron Gates & Fences | Unique Ornamental Iron, CA</title>
     <link rel = "stylesheet" href = "assets/css/style.css" />
     <link href = "https://fonts.googleapis.com/css2?family=Oswald&family=Open+Sans&display=swap" rel = "stylesheet">
     <meta name="description" content="Family-owned gate and fencing specialists since 1990. Unique Ornamental Iron builds custom wrought iron solutions for homes and businesses across Southern California.">
