--- a/highlights.html
+++ b/highlights.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Project Gallery | Iron Fencing & Gates | Homeland CA</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
   <link rel="stylesheet" href="assets/css/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Open+Sans&display=swap" rel="stylesheet">
   <meta name="description" content="Family-owned gate and fencing specialists since 1990. Unique Ornamental Iron builds custom wrought iron solutions for homes and businesses across Southern California.">
@@ -12,9 +13,9 @@
   <link rel="stylesheet" href="assets/css/style.css?v=2" />
 
 </head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-QVXNBNRGT7"></script>
-<script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QVXNBNRGT7"></script>
+  <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
@@ -37,6 +38,7 @@
 
   <main>
     <section class="highlights">
+      <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
       <h2>Project Gallery</h2>
       <p>From driveway gates to backyard fencing, here's a look at just a few of the custom projects we've brought to life for our clients across Southern California.</p>
       <div class="gallery" id = "gallery"></div>
@@ -52,12 +54,27 @@
           { file: "sample8.jpg", alt: "Patio railing fencing installation in Southern California" }
         ];
 
+        const gallery = document.getElementById('gallery');
+
         imageList.forEach(file => {
+          const link = document.createElement('a');
+          link.href = `assets/images/${file.file}`;
+          link.className = 'glightbox';
+          link.setAttribute('data-gallery', 'iron-gallery');
+
           const img = document.createElement('img');
           img.src = `assets/images/${file.file}`;
           img.alt = file.alt;
-          gallery.appendChild(img);
-        })
+          img.loading = "lazy";
+
+          link.appendChild(img);
+          gallery.appendChild(link);
+        });
+
+// Initialize AFTER images are added
+        const lightbox = GLightbox({
+          selector: '.glightbox'
+        });
       </script>
     </section>
   </main>
@@ -66,5 +83,6 @@
     <p>&copy; 2025 Unique Ornamental Iron Inc. All rights reserved.</p>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
 </body>
 </html>
