--- a/highlights.html
+++ b/highlights.html
@@ -51,7 +51,14 @@
           { file: "sample5.jpg", alt: "Awning custom project in Southern California" },
           { file: "sample6.jpg", alt: "Simple side gate custom installation" },
           { file: "sample7.jpg", alt: "Decorative security screen in Southern California" },
-          { file: "sample8.jpg", alt: "Patio railing fencing installation in Southern California" }
+          { file: "sample8.jpg", alt: "Patio railing fencing installation in Southern California" },
+          { file: "sample9.jpg", alt: "Personalized gate design" },
+          { file: "sample10.jpg", alt: "Wrought iron security gate" },
+          { file: "sample11.jpg", alt: "Simple side gate project" },
+          { file: "sample12.jpg", alt: "Custom built pool fencing" },
+          { file: "sample13.jpg", alt: "Durable wrought iron perimeter fencing" },
+          { file: "sample14.jpg", alt: "Stunning safety balcony railing" },
+          { file: "sample15.jpg", alt: "Unique iron entryway" }
         ];
 
         const gallery = document.getElementById('gallery');
