Added hours of operation, added service area map

--- a/about.html
+++ b/about.html
@@ -47,6 +47,13 @@
       <p>Made in the USA. Built to last. Powered by family.</p>
       
     </section>
+
+    <section id="service-area" class="service-area">
+      <h2>Our Service Area</h2>
+        <img src="assets/images/riverside-map.png" alt="Our service area — based in Homeland and serving Riverside County">
+        <p>Located in Homeland, CA, we proudly serve clients throughout Riverside County: Homeland, Hemet, Winchester, Nuevo, Romoland, Menifee, and surrounding areas.</p>
+    </section>
+
   </main>
 
   <footer>
