Added quote cta buttons on highlights. Centered text on highlights

--- a/highlights.html
+++ b/highlights.html
@@ -41,6 +41,11 @@
       <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
       <h2>Project Gallery</h2>
       <p>From driveway gates to backyard fencing, here's a look at just a few of the custom projects we've brought to life for our clients across Southern California.</p>
+
+      <div class="cta-quote top">
+        <a href="contact.html" class="cta-button">Get a Quote!</a>
+      </div>
+
       <div class="gallery" id = "gallery"></div>
       <script>
         const imageList = [
@@ -93,6 +98,11 @@
           selector: '.glightbox'
         });
       </script>
+      <div class="cta-quote">
+  <p>Like what you see?</p>
+  <a href="contact.html" class="cta-button">Get a Quote!</a>
+</div>
+
     </section>
   </main>
 
