Added CA LIC# to all pages

--- a/about.html
+++ b/about.html
@@ -57,8 +57,9 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Unique Ornamental Iron Inc. All rights reserved.</p>
-  </footer>
+        <p>&copy; 2025 Unique Ornamental Iron Inc. All rights reserved.<br>
+        Licensed, Bonded & Insured — CA LIC#709394</p>
+    </footer>
 
 </body>
 </html>
