--- a/highlights.html
+++ b/highlights.html
@@ -107,8 +107,9 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Unique Ornamental Iron Inc. All rights reserved.</p>
-  </footer>
+        <p>&copy; 2025 Unique Ornamental Iron Inc. All rights reserved.<br>
+        Licensed, Bonded & Insured — CA LIC#709394</p>
+    </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
 </body>
