--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Unique Ornamental Iron Inc. All rights reserved.</p>
+        <p>&copy; 2025 Unique Ornamental Iron Inc. All rights reserved.<br>
+        Licensed, Bonded & Insured — CA LIC#709394</p>
     </footer>
 </body>
 </html>
