SEO improvements and CSS changes for contact.html

--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,42 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact Us | Iron Gates & Fencing Experts | Homeland CA</title>
+  <title>Contact Unique Ornamental Iron | Request a Custom Iron Gate or Fence Quote</title>
   <link rel="stylesheet" href="assets/css/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Open+Sans&display=swap" rel="stylesheet">
-  <meta name="description" content="Family-owned gate and fencing specialists since 1990. Unique Ornamental Iron builds custom wrought iron solutions for homes and businesses across Southern California.">
+  <meta name="description" content="Get in touch with Unique Ornamental Iron in Homeland CA for quotes on custom iron gates, fencing, and railings. Serving Southern California homes & businesses since 1990.">
   <meta name="keywords" content="custom gates, wrought iron fencing, metalwork, driveway gates, iron fencing, SoCal fencing, family owned, Unique Ornamental Iron">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="assets/css/style.css?v=2" />
+
+  <script type = "application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "LocalBusiness",
+            "name": "Unique Ornamental Iron Inc.",
+            "image": "https://lonewolfc6.github.io/unique-ornamental-iron/assets/images/sample1.jpg"
+            "@id": "",
+            "url": "https://lonewolfc6.github.io/unique-ornamental-iron/"
+            "telephone": "(760) 981-2026",
+            "address": {
+                "@type" : "PostalAddress",
+                "streetAddress": "Homeland CA",
+                "addressLocality": "Homeland",
+                "postalCode": "",
+                "addressCountry": "US"
+            },
+            "geo": {
+                "@type": "GeoCoordinates",
+                "latitude": 33.742,
+                "longitude": -117.113
+            },
+            "sameAs": [
+            "https://www.yelp.com/biz/unique-ornamental-iron-homeland",
+            "https://www.facebook.com/profile.php?id=100063850229702"
+            ],
+            "description": "Unique Ornamental Iron Inc. builds custom iron gates, fencing, railings, and more throughout Homeland CA and Southern California since 1990."
+        }
+    </script>
 
 </head>
 <!-- Google tag (gtag.js) -->
@@ -25,6 +54,7 @@
 
   <header>
     <h1>Unique Ornamental Iron Inc.</h1>
+    <h2>Contact Homeland CA's Iron Gate & Fencing Specialists</h2>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -38,6 +68,7 @@
   <main>
     <section class="contact">
       <h2>Get in Touch</h2>
+      <h3>Contact Unique Ornamental Iron in Homeland, CA</h3>
       <p>Prefer to talk directly? Give us a call at (760) 981-2026 or check out our Yelp page to see what others are saying.</p>
       <p>Have a question or want a quote? Reach out below!</p>
 
@@ -57,6 +88,8 @@
 
     <section class = "hours">
       <h2>Business Hours</h2>
+      <h3>Current Weekly Hours of Operation</h3>
+      <h3>-------------------------------------------------</h3>
       <ul>
         <li><strong>Monday:</strong> 9:00 AM - 5:00 PM</li>
         <li><strong>Tuesday:</strong> 9:00 AM - 5:00 PM</li>
