--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Custom Iron Gates & Fences | Unique Ornamental Iron, CA</title>
+    <title>Custom Iron Gates & Fences | Unique Ornamental Iron - Homeland CA</title>
     <link rel = "stylesheet" href = "assets/css/style.css" />
     <link href = "https://fonts.googleapis.com/css2?family=Oswald&family=Open+Sans&display=swap" rel = "stylesheet">
-    <meta name="description" content="Family-owned gate and fencing specialists since 1990. Unique Ornamental Iron builds custom wrought iron solutions for homes and businesses across Southern California.">
+    <meta name="description" content="Since 1990, Unique Ornamental Iron has designed custom iron gates, fences, and railings for homes and businesses in Homeland and across Southern California." />
     <meta name="keywords" content="custom gates, wrought iron fencing, metalwork, driveway gates, iron fencing, SoCal fencing, family owned, Unique Ornamental Iron">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css?v=2" />
@@ -20,10 +20,41 @@
         gtag('config', 'G-QVXNBNRGT7');
     </script>
 
+    <script type = "application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "LocalBusiness",
+            "name": "Unique Ornamental Iron Inc.",
+            "image": "https://lonewolfc6.github.io/unique-ornamental-iron/assets/images/sample1.jpg"
+            "@id": "",
+            "url": "https://lonewolfc6.github.io/unique-ornamental-iron/"
+            "telephone": "(760) 981-2026",
+            "address": {
+                "@type" : "PostalAddress",
+                "streetAddress": "Homeland CA",
+                "addressLocality": "Homeland",
+                "postalCode": "",
+                "addressCountry": "US"
+            },
+            "geo": {
+                "@type": "GeoCoordinates",
+                "latitude": 33.742,
+                "longitude": -117.113
+            },
+            "sameAs": [
+            "https://www.yelp.com/biz/unique-ornamental-iron-homeland",
+            "https://www.facebook.com/profile.php?id=100063850229702"
+            ],
+            "description": "Unique Ornamental Iron Inc. builds custom iron gates, fencing, railings, and more throughout Homeland CA and Southern California since 1990."
+        }
+    </script>
+
 </head>
 <body class = "home">
     <header>
         <h1>Unique Ornamental Iron Inc.</h1>
+        <h2>Custom Iron Gates, Fencing & Railings in Homeland CA</h2>
+        <p>Since 1990, we've delivered handcrafted gates, fences, and metalwork for homes and businesses across Southern California. If you can dream it, we can build it.</p>
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
@@ -52,6 +83,7 @@
         </section>
         <section id="service-area" class="service-area">
             <h2>Our Service Area</h2>
+            <h3>Homeland, CA & Surrounding Regions</h3>
                 <img src="assets/images/riverside-map.png" alt="Our service area — based in Homeland and serving Riverside County">
                 <p>Located in Homeland, CA, we proudly serve clients throughout Riverside County: Homeland, Hemet, Winchester, Nuevo, Romoland, Menifee, and surrounding areas.</p>
         </section>
