--- a/about.html
+++ b/about.html
@@ -3,13 +3,42 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About Our Family Ironwork Business | Unique Ornamental Iron</title>
+  <title>About Unique Ornamental Iron | Homeland CA Ironwork Experts Since 1990</title>
   <link rel="stylesheet" href="assets/css/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Open+Sans&display=swap" rel="stylesheet">
-  <meta name="description" content="Family-owned gate and fencing specialists since 1990. Unique Ornamental Iron builds custom wrought iron solutions for homes and businesses across Southern California.">
+  <meta name="description" content="Learn about Unique Ornamental Iron's 30+ years of family-owned expertise in custom iron gates, fencing, and ornamental metalwork across Homeland CA and Southern California.">
   <meta name="keywords" content="custom gates, wrought iron fencing, metalwork, driveway gates, iron fencing, SoCal fencing, family owned, Unique Ornamental Iron">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="assets/css/style.css?v=2" />
+
+  <script type = "application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "LocalBusiness",
+            "name": "Unique Ornamental Iron Inc.",
+            "image": "https://lonewolfc6.github.io/unique-ornamental-iron/assets/images/sample1.jpg"
+            "@id": "",
+            "url": "https://lonewolfc6.github.io/unique-ornamental-iron/"
+            "telephone": "(760) 981-2026",
+            "address": {
+                "@type" : "PostalAddress",
+                "streetAddress": "Homeland CA",
+                "addressLocality": "Homeland",
+                "postalCode": "",
+                "addressCountry": "US"
+            },
+            "geo": {
+                "@type": "GeoCoordinates",
+                "latitude": 33.742,
+                "longitude": -117.113
+            },
+            "sameAs": [
+            "https://www.yelp.com/biz/unique-ornamental-iron-homeland",
+            "https://www.facebook.com/profile.php?id=100063850229702"
+            ],
+            "description": "Unique Ornamental Iron Inc. builds custom iron gates, fencing, railings, and more throughout Homeland CA and Southern California since 1990."
+        }
+    </script>
 
 </head>
 <!-- Google tag (gtag.js) -->
@@ -25,6 +54,7 @@
 
   <header>
     <h1>Unique Ornamental Iron Inc.</h1>
+    <h2>About Unique Ornamental Iron — Your Local Gate & Fencing Experts</h2>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -38,6 +68,7 @@
   <main>
     <section class="about">
       <h2>About Us</h2>
+      <h3>Family-Owned & Operated Across Generations</h3>
       <p>Founded in 1990 by Rodney J., Unique Ornamental Iron Inc. has grown from a small portable welding business into a family-run leader in the Southern California gate and fencing industry. With roots in metal fabrication passed down through generations, our team builds with passion, precision, and pride.
 
       <p>From beautifully crafted residential gates to durable commercial fencing solutions, our work is tailored to your vision — because if you can dream it, we can build it.</p>
@@ -50,6 +81,7 @@
 
     <section id="service-area" class="service-area">
       <h2>Our Service Area</h2>
+      <h3>Homeland, CA & Surrounding Regions</h3>
         <img src="assets/images/riverside-map.png" alt="Our service area — based in Homeland and serving Riverside County">
         <p>Located in Homeland, CA, we proudly serve clients throughout Riverside County: Homeland, Hemet, Winchester, Nuevo, Romoland, Menifee, and surrounding areas.</p>
     </section>
