--- a/highlights.html
+++ b/highlights.html
@@ -3,14 +3,43 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Project Gallery | Iron Fencing & Gates | Homeland CA</title>
+  <title>Project Gallery | Custom Iron Gates & Fencing in Homeland CA</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
   <link rel="stylesheet" href="assets/css/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Open+Sans&display=swap" rel="stylesheet">
-  <meta name="description" content="Family-owned gate and fencing specialists since 1990. Unique Ornamental Iron builds custom wrought iron solutions for homes and businesses across Southern California.">
+  <meta name="description" content="Browse our gallery of custom iron gates, fences, and ornamental metal projects handcrafted by Unique Ornamental Iron in Homeland CA.">
   <meta name="keywords" content="custom gates, wrought iron fencing, metalwork, driveway gates, iron fencing, SoCal fencing, family owned, Unique Ornamental Iron">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="assets/css/style.css?v=2" />
+
+  <script type = "application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "LocalBusiness",
+            "name": "Unique Ornamental Iron Inc.",
+            "image": "https://lonewolfc6.github.io/unique-ornamental-iron/assets/images/sample1.jpg"
+            "@id": "",
+            "url": "https://lonewolfc6.github.io/unique-ornamental-iron/"
+            "telephone": "(760) 981-2026",
+            "address": {
+                "@type" : "PostalAddress",
+                "streetAddress": "Homeland CA",
+                "addressLocality": "Homeland",
+                "postalCode": "",
+                "addressCountry": "US"
+            },
+            "geo": {
+                "@type": "GeoCoordinates",
+                "latitude": 33.742,
+                "longitude": -117.113
+            },
+            "sameAs": [
+            "https://www.yelp.com/biz/unique-ornamental-iron-homeland",
+            "https://www.facebook.com/profile.php?id=100063850229702"
+            ],
+            "description": "Unique Ornamental Iron Inc. builds custom iron gates, fencing, railings, and more throughout Homeland CA and Southern California since 1990."
+        }
+    </script>
 
 </head>
   <!-- Google tag (gtag.js) -->
@@ -26,6 +55,8 @@
 
   <header>
     <h1>Unique Ornamental Iron Inc.</h1>
+    <h2>Gallery of Custom Iron Gates, Fencing & Metalwork Projects</h2>
+    <h3>Driveway Gates, Fences, Railings & More</h3>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
